--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,6 @@ name = "dg"
 path = "src/main.rs"
 
 [dependencies]
-atty = "0.2.14"
 color-eyre = "0.6.3"
 config = "0.15.8"
 directories = "6.0.0"
@@ -24,9 +23,9 @@ serde = { version = "1.0.218", features = ["derive"] }
 serde_json = "1.0.139"
 sysinfo = "0.33.1"
 thiserror = "2.0.11"
-tokio = { version = "1.43.0", features = ["full"] }
+tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "time", "signal", "fs"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 
 [dev-dependencies]
-rstest = "0.24.0"
+tempfile = "3.17.1"
