--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,10 @@ name: CI
 
 on:
   push:
-    branches: [ "main", "master" ]
+    branches:
+      - master
   pull_request:
-    branches: [ "main", "master" ]
+    branches: ["**"]
   schedule:
     - cron: '0 0 * * 0'  # Weekly security audit
 
@@ -136,40 +137,3 @@ jobs:
       
       - name: Build Target
         run: cross build --target ${{ matrix.target }}
-
-  release:
-    name: Release Build
-    if: startsWith(github.ref, 'refs/tags/')
-    needs: [test, security-audit, coverage, msrv, publish-dry-run, cross-compile]
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        include:
-          - os: ubuntu-latest
-            artifact_name: dg
-            asset_name: dg-linux-amd64
-          - os: macos-latest
-            artifact_name: dg
-            asset_name: dg-macos-amd64
-          - os: windows-latest
-            artifact_name: dg.exe
-            asset_name: dg-windows-amd64.exe
-    
-    steps:
-      - uses: actions/checkout@v4
-      
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
-      
-      - name: Build Release
-        run: cargo build --release
-      
-      - name: Upload Binary
-        uses: svenstaro/upload-release-action@v2
-        with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: target/release/${{ matrix.artifact_name }}
-          asset_name: ${{ matrix.asset_name }}
-          tag: ${{ github.ref }}
-          overwrite: true 
