--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "data-guardian"
 version = "1.0.1"
-edition = "2021"
+edition = "2024"
 authors = ["Success Kingsley <hello@xosnrdev.tech>"]
 description = "System service for monitoring and optimizing app data usage"
 repository = "https://github.com/xosnrdev/data-guardian"
@@ -29,7 +29,13 @@ serde = { version = "1.0.218", features = ["derive"] }
 serde_json = "1.0.139"
 sysinfo = "0.33.1"
 thiserror = "2.0.11"
-tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "time", "signal", "fs"] }
+tokio = { version = "1.43.0", features = [
+    "macros",
+    "rt-multi-thread",
+    "time",
+    "signal",
+    "fs",
+] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 
