--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "data-guardian"
 version = "1.0.1"
-edition = "2021"
+edition = "2024"
 authors = ["Success Kingsley <hello@xosnrdev.tech>"]
-description = "System service for monitoring and optimizing app data usage"
+description = "System utility that monitors the disk I/O usage of applications running on your computer"
 repository = "https://github.com/xosnrdev/data-guardian"
 homepage = "https://github.com/xosnrdev/data-guardian?tab=readme-ov-file"
 license = "MIT"
@@ -29,7 +29,13 @@ serde = { version = "1.0.218", features = ["derive"] }
 serde_json = "1.0.139"
 sysinfo = "0.33.1"
 thiserror = "2.0.11"
-tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "time", "signal", "fs"] }
+tokio = { version = "1.43.0", features = [
+    "macros",
+    "rt-multi-thread",
+    "time",
+    "signal",
+    "fs",
+] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 
@@ -37,18 +43,23 @@ tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 tempfile = "3.17.1"
 
 [profile.release]
-opt-level = 3
 lto = "fat"
 codegen-units = 1
-panic = 'abort'
+panic = "abort"
 strip = true
+opt-level = 3
 debug = false
 incremental = false
 overflow-checks = false
+rpath = false
+debug-assertions = false
 
 [profile.dev]
-opt-level = 0
-debug = true
+debug-assertions = true
+overflow-checks = true
+
+[package.metadata]
+codegen-units-std = 1
 
 # The profile that 'cargo dist' will build with
 [profile.dist]
