--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,13 +6,9 @@ on:
       - master
   pull_request:
     branches: ["**"]
-  schedule:
-    - cron: '0 0 * * 0'  # Weekly security audit
 
 env:
   CARGO_TERM_COLOR: always
-  RUST_BACKTRACE: 1
-  RUST_LOG: info
 
 jobs:
   test:
@@ -22,7 +18,6 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        rust: [nightly, 1.85.0]
         include:
           - os: ubuntu-latest
             rust: nightly
@@ -30,10 +25,10 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     
-    - name: Install Rust ${{ matrix.rust }}
+    - name: Install Rust
       uses: dtolnay/rust-toolchain@master
       with:
-        toolchain: ${{ matrix.rust }}
+        toolchain: 1.85.0
         components: rustfmt, clippy
     
     - name: Install Linux Dependencies
