chore: Small fixes and improvements (#10)
* chore: Small fixes and improvements

* chore(ci): Use stable rust toolchain

* chore(ci): Simplify branch specification in CI workflow

* chore(deps): Update nixpkgs revision

* chore(deps): Use unstable for latest deps version

* chore: Update dist configuration and CI workflow for version 0.28.0

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,38 +2,26 @@ name: CI
 
 on:
   push:
-    branches:
-      - master
+    branches: [master]
   pull_request:
-    branches: ["**"]
-  schedule:
-    - cron: '0 0 * * 0'  # Weekly security audit
 
 env:
   CARGO_TERM_COLOR: always
-  RUST_BACKTRACE: 1
-  RUST_LOG: info
 
 jobs:
   test:
-    name: Test Suite
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        rust: [nightly, 1.85.0]
-        include:
-          - os: ubuntu-latest
-            rust: nightly
     
     steps:
     - uses: actions/checkout@v4
     
-    - name: Install Rust ${{ matrix.rust }}
-      uses: dtolnay/rust-toolchain@master
+    - name: Install Rust
+      uses: dtolnay/rust-toolchain@stable
       with:
-        toolchain: ${{ matrix.rust }}
         components: rustfmt, clippy
     
     - name: Install Linux Dependencies
