--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,94 +19,22 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     
-    - name: Install Rust
+    - name: Install rust toolchain
       uses: dtolnay/rust-toolchain@stable
       with:
         components: rustfmt, clippy
     
-    - name: Install Linux Dependencies
+    - name: Install linux dependencies
       if: matrix.os == 'ubuntu-latest'
       run: |
         sudo apt-get update
         sudo apt-get install -y libdbus-1-dev
-    
-    - name: Cache Dependencies
-      uses: Swatinem/rust-cache@v2
-    
-    - name: Check Format
+
+    - name: Check formatting
       run: cargo fmt --all -- --check
     
-    - name: Run Clippy
+    - name: Run clippy
       run: cargo clippy --all-targets --all-features -- -D warnings
     
-    - name: Run Tests
+    - name: Run tests
       run: cargo test --all-features --verbose
-
-  security-audit:
-    name: Security Audit
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
-      
-      - name: Install cargo-audit
-        run: cargo install cargo-audit
-      
-      - name: Run Security Audit
-        run: cargo audit
-
-  coverage:
-    name: Code Coverage
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
-
-      - name: Install cargo-tarpaulin
-        run: cargo install cargo-tarpaulin
-      - name: Generate Coverage Report
-        run: cargo tarpaulin --output-dir coverage --out lcov
-          
-      - name: Publish to Coveralls
-        uses: coverallsapp/github-action@master
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-
-  publish-dry-run:
-    name: Publish Dry Run
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
-      
-      - name: Check Package
-        run: cargo publish --dry-run
-
-  cross-compile:
-    name: Cross Compilation
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        target:
-          - aarch64-unknown-linux-gnu
-          - armv7-unknown-linux-gnueabihf
-          - x86_64-pc-windows-gnu
-    steps:
-      - uses: actions/checkout@v4
-      
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          targets: ${{ matrix.target }}
-      
-      - name: Install Cross
-        run: cargo install cross
-      
-      - name: Build Target
-        run: cross build --target ${{ matrix.target }}
